[metadata]
name = first-python-package
version = 0.0.1
url = https://github.com/yomama/writescode
author = Givens Family
author_email = "Givens Family" <given.family@example.com>
description = This package does the most amazing things.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True

[options.packages.find]
where=src
